--- a/railway.toml
+++ b/railway.toml
@@ -15,3 +15,7 @@ requiredMountPath = "/data"
 # can cause domain routing mismatches.
 OPENCLAW_STATE_DIR = "/data/.openclaw"
 OPENCLAW_WORKSPACE_DIR = "/data/workspace"
+BROWSER_ENABLED = "true"
+BROWSER_HEADLESS = "true"
+BROWSER_NO_SANDBOX = "true"
+BROWSER_DEFAULT_PROFILE = "openclaw"
