--- a/railway.toml
+++ b/railway.toml
@@ -19,3 +19,7 @@ BROWSER_ENABLED = "true"
 BROWSER_HEADLESS = "true"
 BROWSER_NO_SANDBOX = "true"
 BROWSER_DEFAULT_PROFILE = "openclaw"
+CLAWDBOT_GATEWAY_TOKEN=""
+CLAWDBOT_STATE_DIR="/data/.clawdbot"
+CLAWDBOT_WORKSPACE_DIR="/data/workspace"
+SETUP_PASSWORD="!"
